Added Feed handler working

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,22 @@
         android:theme="?attr/actionBarTheme" />
 
     <!-- RecyclerView für die Liste der Rezepte -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewRezepte"
+
+    <!-- Your layout file (e.g., activity_main.xml) -->
+    <!-- activity_main.xml -->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:padding="16dp" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:clipToPadding="false"
+            android:clipChildren="false" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
