Added ingridients for a recipe (Still need to be fixed)

--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -66,6 +66,14 @@
                 android:text="Category: Dessert"
                 android:textSize="16sp" />
 
+            <TextView
+                android:id="@+id/ard_recipeIngredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Zutaten: null"
+                android:textSize="16sp" />
+
             <!-- Recipe Description -->
             <TextView
                 android:id="@+id/ard_recipeDescription"
