--- a/app/src/main/res/layout/activity_start_recipe.xml
+++ b/app/src/main/res/layout/activity_start_recipe.xml
@@ -6,29 +6,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp">
 
+
     <TextView
         android:id="@+id/asr_titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="136dp"
         android:text="Step-by-Step Guide"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/asr_stepTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/asr_stepTextView"
-        android:layout_width="375dp"
-        android:layout_height="580dp"
-        android:layout_marginBottom="376dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="184dp"
+        android:scrollbars="vertical"
         android:text="Step will appear here"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/asr_nextButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/asr_titleTextView" />
 
     <Button
         android:id="@+id/asr_nextButton"
