--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -7,14 +7,17 @@
     android:padding="16dp">
 
     <!-- ScrollView to contain the main content -->
+
+    <!-- Start Recipe Button -->
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/startRecipeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,8 +29,7 @@
                 android:id="@+id/ard_imageView"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                />
+                android:scaleType="centerCrop" />
 
             <!-- Recipe Name -->
             <TextView
@@ -39,39 +41,56 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <!-- Recipe Difficulty -->
-            <TextView
-                android:id="@+id/ard_recipeDifficulty"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Difficulty: Medium"
-                android:textSize="16sp" />
+            <!-- ChipGroup for Recipe Details -->
 
-            <!-- Recipe Time -->
-            <TextView
-                android:id="@+id/ard_recipeTime"
-                android:layout_width="match_parent"
+            <!-- Recipe Ingredients -->
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/ard_chipGroup"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Time: 30 mins"
-                android:textSize="16sp" />
+                app:singleLine="true">
 
-            <!-- Recipe Category -->
-            <TextView
-                android:id="@+id/ard_recipeCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Category: Dessert"
-                android:textSize="16sp" />
+                <!-- Recipe Category Chip -->
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/ard_chip_category"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Category: null" />
+
+                <!-- Recipe Difficulty Chip -->
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/ard_chip_difficulty"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Difficulty: null"
+                    app:chipIcon="@drawable/signal_cellular_alt"
+                    app:chipIconSize="24dp"
+                    app:iconEndPadding="8dp"
+                    app:iconStartPadding="8dp" />
+
+                <!-- Recipe Time Chip -->
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/ard_chip_time"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time: null"
+                    app:chipIcon="@drawable/schedule"
+                    app:chipIconSize="24dp"
+                    app:iconEndPadding="8dp"
+                    app:iconStartPadding="8dp" />
+
+            </com.google.android.material.chip.ChipGroup>
 
             <TextView
                 android:id="@+id/ard_recipeIngredients"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Zutaten: null"
+                android:text="Ingredients: null"
                 android:textSize="16sp" />
 
             <!-- Recipe Description -->
@@ -80,13 +99,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="This is \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n  a detailed description of the recipe. It can be as long as it needs to be. Here you can include steps, tips, and other information about the recipe."
+                android:text="This is a detailed description of the recipe. It can be as long as it needs to be. Here you can include steps, tips, and other information about the recipe."
                 android:textSize="16sp" />
 
         </LinearLayout>
     </ScrollView>
 
-    <!-- Start Recipe Button -->
     <Button
         android:id="@+id/startRecipeButton"
         android:layout_width="0dp"
