--- a/app/src/main/res/layout/activity_start_recipe.xml
+++ b/app/src/main/res/layout/activity_start_recipe.xml
@@ -46,7 +46,7 @@
         android:id="@+id/btnSetTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set Timer"
+        android:text="Starte Timer"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/asr_imageView"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,8 +65,8 @@
 
     <Button
         android:id="@+id/asr_nextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="105dp"
+        android:layout_height="61dp"
         android:layout_marginBottom="4dp"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,8 +76,8 @@
 
     <Button
         android:id="@+id/asr_prevButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="105dp"
+        android:layout_height="61dp"
         android:layout_marginBottom="4dp"
         android:text="Prev"
         app:layout_constraintBottom_toBottomOf="parent"
